force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/Impact_Metric__c.field-meta.xml
<CustomField>
    <fullName>Impact_Metric__c</fullName>
    <description>Impact roll-up bucket for annual report</description>
    <label>Impact Metric</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEV Reach</fullName>
            </value>
            <value>
                <fullName>Individuals reached</fullName>
            </value>
            <value>
                <fullName>Individuals tutored</fullName>
            </value>
            <value>
                <fullName>Items created/donated</fullName>
            </value>
            <value>
                <fullName>Meals created/served</fullName>
            </value>
            <value>
                <fullName>Not enough data</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>