force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/Secondary_Impact_Measure__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Impact_Measure__c</fullName>
    <description>Number associated with secondary impact metric</description>
    <label>Secondary Impact Measure</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>