force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/Secondary_Impact_Metri__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Impact_Metri__c</fullName>
    <description>Additional impact metric</description>
    <label>Secondary Impact Metric</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adults tutored (ESOL)</fullName>
            </value>
            <value>
                <fullName>Adults tutored (hi-set)</fullName>
            </value>
            <value>
                <fullName>Audience size</fullName>
            </value>
            <value>
                <fullName>Benches created</fullName>
            </value>
            <value>
                <fullName>Blacktop games, tracks, maps (created)</fullName>
            </value>
            <value>
                <fullName>Blacktop games, tracks, maps (improved)</fullName>
            </value>
            <value>
                <fullName>Bookcases created</fullName>
            </value>
            <value>
                <fullName>Garden beds created, planted, restored</fullName>
            </value>
            <value>
                <fullName>Individuals benefited</fullName>
            </value>
            <value>
                <fullName>Meal packages</fullName>
            </value>
            <value>
                <fullName>Murals painted</fullName>
            </value>
            <value>
                <fullName>Schoolyards/Parks/Trails improved</fullName>
            </value>
            <value>
                <fullName>Spaces painted</fullName>
            </value>
            <value>
                <fullName>Specialty garden items</fullName>
            </value>
            <value>
                <fullName>Storage bins created</fullName>
            </value>
            <value>
                <fullName>Students engaged, Health Fairs</fullName>
            </value>
            <value>
                <fullName>Students engaged, STE(A)M Fairs</fullName>
            </value>
            <value>
                <fullName>Toddler Beds</fullName>
            </value>
            <value>
                <fullName>Twin Beds</fullName>
            </value>
            <value>
                <fullName>Youth tutored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>