force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/SF_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF 18 Digit ID</label>
    <type>Text</type>
</CustomField>