force-app/main/default/objects/HOC__Volunteer_Opportunity__c/recordTypes/EITC_Site.recordType-meta.xml
<RecordType>
    <fullName>EITC_Site</fullName>
    <active>true</active>
    <description>Only use this record type for sites hosting EITC volunteers.</description>
    <label>EITC Site</label>
</RecordType>