force-app/main/default/objects/HOC__Volunteer_Opportunity__c/validationRules/HOC__CheckEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>HOC__CheckEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>IF( HOC__End_Date__c &lt;  HOC__Start_Date__c , true, false)</errorConditionFormula>
    <errorDisplayField>HOC__End_Date__c</errorDisplayField>
    <errorMessage>End date should be greater than Start date</errorMessage>
</ValidationRule>