force-app/main/default/objects/HOC__Volunteer_Opportunity__c/validationRules/HOC__CheckManagedBy.validationRule-meta.xml
<ValidationRule>
    <fullName>HOC__CheckManagedBy</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( HOC__Managed_By__c )</errorConditionFormula>
    <errorDisplayField>HOC__Managed_By__c</errorDisplayField>
    <errorMessage>Value once set cannot be changed</errorMessage>
</ValidationRule>