force-app/main/default/objects/HOC__Volunteer_Opportunity__c/validationRules/HOC__CheckManagingOrg.validationRule-meta.xml
<ValidationRule>
    <fullName>HOC__CheckManagingOrg</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT(ISBLANK( PRIORVALUE(  HOC__Managing_Organization__c ))), IF(ISCHANGED(  HOC__Managing_Organization__c ), true, false), false)</errorConditionFormula>
    <errorDisplayField>HOC__Managing_Organization__c</errorDisplayField>
    <errorMessage>Value once set cannot be changed</errorMessage>
</ValidationRule>