force-app/main/default/objects/HOC__Volunteer_Opportunity__c/validationRules/HOC__CheckOrganizationServed.validationRule-meta.xml
<ValidationRule>
    <fullName>HOC__CheckOrganizationServed</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT(ISBLANK( PRIORVALUE( HOC__Organization_Served__c))), IF(ISCHANGED( HOC__Organization_Served__c ), true, false), false)</errorConditionFormula>
    <errorDisplayField>HOC__Organization_Served__c</errorDisplayField>
    <errorMessage>Value Once set canot be changed</errorMessage>
</ValidationRule>