force-app/main/default/objects/HOC__Volunteer_Opportunity__c/validationRules/HOC__CheckRegistrationDeadline.validationRule-meta.xml
<ValidationRule>
    <fullName>HOC__CheckRegistrationDeadline</fullName>
    <active>true</active>
    <errorConditionFormula>HOC__Registration_Deadline__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>HOC__Registration_Deadline__c</errorDisplayField>
    <errorMessage>Registration Deadline should not be a negative no.</errorMessage>
</ValidationRule>