force-app/main/default/objects/HOC__Volunteer_Opportunity__c/validationRules/HOC__CheckRegistrationType.validationRule-meta.xml
<ValidationRule>
    <fullName>HOC__CheckRegistrationType</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT(ISBLANK( PRIORVALUE(  HOC__Registration_Type__c ))), IF(ISCHANGED(  HOC__Registration_Type__c ), true, false), false)</errorConditionFormula>
    <errorDisplayField>HOC__Registration_Type__c</errorDisplayField>
    <errorMessage>Value once set cannot be changed</errorMessage>
</ValidationRule>