force-app/main/default/objects/HOC__Volunteer_Opportunity__c/validationRules/HOC__CheckScheduleType.validationRule-meta.xml
<ValidationRule>
    <fullName>HOC__CheckScheduleType</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT(ISBLANK( PRIORVALUE(  HOC__Schedule_Type__c ))), IF(ISCHANGED( HOC__Schedule_Type__c ), true, false), false)</errorConditionFormula>
    <errorDisplayField>HOC__Schedule_Type__c</errorDisplayField>
    <errorMessage>Value once set cannot be changed</errorMessage>
</ValidationRule>