force-app/main/default/objects/HOC__Volunteer_Opportunity__c/validationRules/HOC__Coordinator_Email_not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>HOC__Coordinator_Email_not_Editable</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  AND( (PRIORVALUE( HOC__Volunteer_Coordinator_Email__c ) &lt;&gt; HOC__Volunteer_Coordinator_Email__c ), ( HOC__Opportunity_Coordinator__r.Email &lt;&gt; HOC__Volunteer_Coordinator_Email__c),Name!=&apos;Self-Reported Volunteer Hours&apos;) , true, false)</errorConditionFormula>
    <errorDisplayField>HOC__Volunteer_Coordinator_Email__c</errorDisplayField>
    <errorMessage>This field is only editable by &quot;Opportunity Coordinator&quot; Lookup</errorMessage>
</ValidationRule>